# workflowTest

.github/workflows/: AzureContainerAppJobTest.yml  BuildLintTest.yml  Test.yml  azure-Container-app-dotnet.yml  azure-functions-app-dotnet.yml  func_test.yml  pytest.yml
PythonTest/: Untitled-1.py
PythonTest/fastapi_project/: pyproject.toml
PythonTest/fastapi_project/tests/: test_main.py
TimerFuncTest/: TimerFuncTest.sln
TimerFuncTest/TimerFuncTest/: Function1.cs  TimerFuncTest.csproj
TimerFuncTest/TimerFuncTest/Properties/: launchSettings.json
fastapi_project/: pyproject.toml
fastapi_project/src/: main.py
razorWebApplication1/: .gitignore  razorWebApplication1.sln
razorWebApplication1/razorWebApplication1/: Dockerfile  Program.cs  appsettings.json  razorWebApplication1.csproj
razorWebApplication1/razorWebApplication1/Data/: AppDbContext.cs
razorWebApplication1/razorWebApplication1/Models/: Product.cs
razorWebApplication1/razorWebApplication1/Pages/: ApiTest.cshtml  ApiTest.cshtml.cs  BlobStorageTest.cshtml  BlobStorageTest.cshtml.cs  Board.cshtml  Board.cshtml.cs  Create.cshtml  Create.cshtml.cs  Delete.cshtml  Delete.cshtml.cs  Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Insert.cshtml  Insert.cshtml.cs  Login.cshtml  Login.cshtml.cs  Privacy.cshtml.cs  QueueTest.cshtml  QueueTest.cshtml.cs  Select.cshtml  Select.cshtml.cs  Update.cshtml  Update.cshtml.cs  _ViewImports.cshtml
razorWebApplication1/razorWebApplication1/Properties/: launchSettings.json
razorWebApplication1/razorWebApplication1/Service/: ProductCreateService.cs  (+3 more)
(+9 files in other folders)
